<resources>
    <string name="app_name">Fusebulb</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="name_hint">Name</string>
    <string name="language_label">Language</string>
    <string name="done">DONE</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>




    <string name="locate">locate</string>
    <string name="camera">camera</string>
    <string name="list_of_places_of_interest">list of places of interest</string>
    <string name="play_tour_background_image">play_tour_background_image</string>


    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="close_tour">close tour</string>
    <string name="fast_forward">fast_forward</string>
    <string name="rewind">rewind</string>
    <string name="via_bluetooth">Bluetooth</string>
    <string name="via_internet">Internet</string>
    <string name="download_label">Download content via</string>
    <string name="error_user_name">Please enter your name</string>
    <string name="content_file_not_found">No content file found in your device. Please contact tour manager or choose Internet option.</string>
    <string name="share_app_message">Hey! Share this cool app I have found.</string>
</resources>
